compelete test handler

--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -120,6 +120,7 @@ crossorigin="anonymous"></script>
         })
     }
 
+
     function notifyModal(title, text, icon, confirmationButtonText) {
         Swal.fire({
             title: title,
@@ -129,6 +130,18 @@ crossorigin="anonymous"></script>
         })
     }
 
+    {{with .Flash}}
+    notify("{{.}}","success")
+    {{end}}
+
+    {{with .Warning}}
+    notify("{{.}}","warning")
+    {{end}}
+
+    {{with .Error}}
+    notify("{{.}}","error")
+    {{end}}
+    
     function Prompt() {
         let toast = function (c) {
             const {
