--- a/templates/generals.page.html
+++ b/templates/generals.page.html
@@ -62,9 +62,9 @@
             title: 'Choose your dates',
             msg: html,
             callback: function(result){
-                console.log("called")
-                let form = document.getElementById("check-availability-form")
-                let formData = new FormData(form)
+                console.log("called");
+                let form = document.getElementById("check-availability-form");
+                let formData = new FormData(form);
                 formData.append("csrf_token","{{.CSRFToken}}")
                 fetch("/search-availability-json",{
                     method:"post",
